RESOLVED FIXED309511
[Site Isolation] Web Inspector: Page navigating cross-origin won't complete with inspector open
https://bugs.webkit.org/show_bug.cgi?id=309511
Summary [Site Isolation] Web Inspector: Page navigating cross-origin won't complete w...
Qianlang Chen
Reported 2026-03-09 12:04:44 PDT
Under site isolation, with Web Inspector open, navigating the webpage to a different origin will never complete loading rdar://160469869
Attachments
Qianlang Chen
Comment 1 2026-03-09 14:27:55 PDT
Repro steps: 1. run-minibrowser --site-isolation https://www.google.com/search?q=apple 2. Open Web Inspector 3. Either click on a search result or enter a new address with a different origin in the address bar (like not google.com) and hit Enter -> Loading will start but appear to be stuck. But even if I close Web Inspector now, loading won't be unblocked. Only when I trigger a new navigation or hit refresh, while Web Inspector is closed, the new navigation will take place like normal
Qianlang Chen
Comment 2 2026-03-09 14:30:45 PDT
EWS
Comment 3 2026-03-09 19:58:38 PDT
Committed 308952@main (1b5686beea25): <https://commits.webkit.org/308952@main> Reviewed commits have been landed. Closing PR #60212 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.